@@ -83,6 +83,11 @@
          <artifactId>h2</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.testng</groupId>
+         <artifactId>testng</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
@@ -93,6 +98,22 @@
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                   <configLocation>checkstyle-hibernate-cache.xml</configLocation>
+               </configuration>
+            </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <configuration>
+                  <dependenciesToScan>
+                     <dependency>${project.groupId}:infinispan-hibernate-cache-commons</dependency>
+                  </dependenciesToScan>
+                  <argLine>${forkJvmArgs} ${testjvm.jigsawArgs} -Djdk.attach.allowAttachSelf=true</argLine>
+                  <systemPropertyVariables>
+                     <jgroups.ping.timeout>500</jgroups.ping.timeout>
+                     <jgroups.ping.num_initial_members>1</jgroups.ping.num_initial_members>
+                     <jgroups.udp.enable_bundling>false</jgroups.udp.enable_bundling>
+                     <hibernate.cache.infinispan.jgroups_cfg>2lc-test-tcp.xml</hibernate.cache.infinispan.jgroups_cfg>
+                  </systemPropertyVariables>
                </configuration>
             </plugin>
          </plugins>
